@@ -15,6 +15,7 @@
 - Added RemoveMinimalGeneratorFromIdeal
 - Added AsNumericalSemigroup for idemopotent ideals of numerical semigroups
 - Added IsStable for ideals of numerical semigroups
+- Improved DotBinaryRelation
 
 1.3.1 -> 1.4.0
 - Added NumericalSemigroupsWithFrobeniusNumberPC
